Feat: Adjust Rmd

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -13,7 +13,7 @@ library(ggplot2)
 
 ## Loading and preprocessing the data
 
-### Firstly, download the zip file from web link:
+#### Firstly, download the zip file from web link:
 
 ```{r}
 # download the dataset from web link
@@ -28,7 +28,7 @@ download_data <- function(){
 download_data()
 ```
 
-### Unzip the zip file:
+#### Unzip the zip file:
 
 ```{r}
 # unzip the dataset
@@ -41,7 +41,7 @@ unzip_data <- function(){
 unzip_data()
 ```
 
-### Load the dataset:
+#### Load the dataset:
 
 ```{r}
 # load the dataset
@@ -51,7 +51,7 @@ act_df <- read.csv('activity.csv')
 
 ## What is mean total number of steps taken per day?
 
-### Calculate the total number of steps taken per day
+#### Calculate the total number of steps taken per day
 
 ```{r}
 steps_per_day <- tapply(act_df$steps, act_df$date, sum, na.rm = TRUE)
@@ -59,15 +59,17 @@ steps_per_day
 ```
 
 
-### If you do not understand the difference between a histogram and a barplot, research the difference between them. Make a histogram of the total number of steps taken each day
+#### If you do not understand the difference between a histogram and a barplot, research the difference between them. Make a histogram of the total number of steps taken each day
 
 **We can use a histogram to plot the number of steps recorded each day:**
 
-```{r}
-qplot(steps_per_day, xlab = "Total Steps Recorded Per Day", ylab = "Frequency", bins = 30)
+```{r, warning=FALSE, message=FALSE}
+plot1 <- qplot(steps_per_day, xlab = "Total Steps Recorded Per Day", ylab = "Frequency", bins = 30)
+plot1
+ggsave("plot1.png", plot1)
 ```
 
-### Calculate and report the mean and median total number of steps taken per day
+#### Calculate and report the mean and median total number of steps taken per day
 
 ```{r}
 steps_per_day_mean <- mean(steps_per_day)
@@ -85,16 +87,18 @@ avg_steps_pattern <-  aggregate(x = list(mean_steps = act_df$steps),
                                 mean, na.rm = TRUE)
 ```
 
-### Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+#### Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
 
-```{r}
-ggplot(avg_steps_pattern, aes(interval, mean_steps)) +
-      geom_line(size = 1) +
-      labs(x = "Counts of 5-Mins Interval", y = "Average Number of Steps") +
-      theme_classic()
+```{r, warning=FALSE, message=FALSE}
+plot2 <- ggplot(avg_steps_pattern, aes(interval, mean_steps)) +
+                geom_line(size = 1) +
+                labs(x = "Counts of 5-Mins Interval", y = "Average Number of Steps") +
+                theme_classic()
+plot2
+ggsave("plot2.png", plot2)
 ```
 
-### Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+#### Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
 
 ```{r}
 max_steps <- which.max(avg_steps_pattern$mean_steps)
@@ -105,7 +109,7 @@ max_time <- gsub("([0-9]{1,2})([0-9]{2})", "\\1:\\2", avg_steps_pattern[max_step
 
 ## Imputing missing values
 
-### Calculate and report the total number of missing values in the dataset
+#### Calculate and report the total number of missing values in the dataset
 
 ```{r}
 num_null <- sum(is.na(act_df$steps))
@@ -113,23 +117,25 @@ num_null <- sum(is.na(act_df$steps))
 
 **Number of missing values is `r num_null`**
 
-### Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+#### Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
 
 **The strategy used for filling in all of missing values in the dataset is to replace the missing values with mean.**
 
-### Create a new dataset that is equal to the original dataset but with the missing data filled in:
+#### Create a new dataset that is equal to the original dataset but with the missing data filled in:
 
 ```{r}
 imputed_act_df <- act_df
 imputed_act_df$steps <- impute(act_df$steps, mean)
 ```
 
-### Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+#### Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
 
-```{r}
+```{r, warning=FALSE, message=FALSE}
 imputed_steps_per_day <- tapply(imputed_act_df$steps, imputed_act_df$date, sum)
-qplot(imputed_steps_per_day, xlab = "Total Steps Per Day After Imputation", 
-      ylab = "Frequency", bins = 30)
+plot3 <- qplot(imputed_steps_per_day, xlab = "Total Steps Per Day After Imputation", 
+               ylab = "Frequency", bins = 30)
+plot3
+ggsave("plot3.png", plot3)
 ```
 
 ```{r}
@@ -145,20 +151,22 @@ imputed_steps_per_day_median <- median(imputed_steps_per_day)
 
 ## Are there differences in activity patterns between weekdays and weekends?
 
-### Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day
+#### Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day
 ```{r}
 imputed_act_df$weekday <- ifelse(as.POSIXlt(imputed_act_df$date)$wday %in% c(0, 6), 
                                  "weekend", "weekday")
 ```
 
-### Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). See the README file in the GitHub repository to see an example of what this plot should look like using simulated data.
+#### Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). See the README file in the GitHub repository to see an example of what this plot should look like using simulated data.
 
-```{r}
+```{r, warning=FALSE, message=FALSE}
 agg_imputed_act_df <- aggregate(steps ~ interval + weekday, data = imputed_act_df, mean)
-ggplot(agg_imputed_act_df, aes(interval, steps)) +
-      geom_line(size = 1) +
-      facet_grid(weekday ~ .) +
-      labs(x = "Counts of 5-Mins Interval", y = "Average Number of Steps") +
-      theme_classic()
+plot4 <- ggplot(agg_imputed_act_df, aes(interval, steps)) +
+                geom_line(size = 1) +
+                facet_grid(weekday ~ .) +
+                labs(x = "Counts of 5-Mins Interval", y = "Average Number of Steps") +
+                theme_classic()
+plot4
+ggsave("plot4.png", plot4)
 ```
 
